# Ebina

./: .gitignore  Cargo.toml  Dockerfile  README.md  avatar-remove.xcf
.github/workflows/: rust.yml
ebina-anilist/: Cargo.toml
ebina-anilist/schemas/: schema.gql
ebina-anilist/src/: lib.rs
ebina-anilist/src/queries/: mod.rs  queries.gql
ebina-anilist/src/queries/snapshots/: ebina_anilist__queries__tests__search_manga_query_gql_output.snap
ebina-bot/: Cargo.toml  README.md
ebina-bot/assets/: vndb-tags-2021-02-08.json
ebina-bot/migrations/2021-01-26-193020_create_charades/: down.sql
ebina-bot/migrations/2021-12-09-073016_create_discord_settings/: down.sql  up.sql
ebina-bot/src/: main.rs  models.rs  schema.rs
ebina-bot/src/commands/: anilist.rs  charades.rs  general.rs  helium.rs  macros.rs  mangadex.rs  mod.rs  moderation.rs  osu.rs  owner.rs  vndb.rs
ebina-bot/src/utils/: mod.rs  options.rs
ebina-macro/: Cargo.toml
ebina-macro/src/: lib.rs
ebina-types/: Cargo.toml
ebina-types/src/: lib.rs
ebina-web/: Cargo.toml
ebina-web-dashboard/: Cargo.toml  index.html
ebina-web-dashboard/src/: main.rs
ebina-web-dashboard/src/model/: guilds.rs
ebina-web/src/: lib.rs  models.rs  prometheus.rs
ebina-webhook/: Cargo.toml
ebina-webhook/src/: main.rs
migrations/2021-01-26-193020_create_charades/: down.sql  up.sql
src/: main.rs  mod.rs  models.rs  schema.rs
src/commands/: charades.rs  feed.rs  general.rs  mangadex.rs  mod.rs  moderation.rs  osu.rs  owner.rs  vndb.rs
