[package]
name = "ebina-anilist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cynic = { version = "1.0.0", features = ["reqwest"] }
graphql_client = "0.10.0"
reqwest = { version = "0.11.7", features = ["json"] }
serde = "1.0.131"
tokio = { version = "1.14.0", features = ["macros"] }

[dev-dependencies]
insta = "1.8.0"
