[package]
name = "ebina-bot"
version = "0.1.0"
authors = ["Tracreed <davidalasow@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
bigdecimal = { version = "0.1.2", optional = true}
vndb = { git="https://github.com/Tracreed/vndb.rs", features = ["tokio-on"] }
serde_json = "1.0"
serde = "1.0.123"
diesel-derive-enum = { version = "1", features = ["postgres"] }
regex = "1"
isolang = "1.0.0"
num-format = "0.4.0"
isocountry = "0.3.2"
osu_v2 = { git = "https://git.fuyu.moe/Tracreed/osu_v2"}
read_color = "1.0.0"
chrono = "0.4.19"
humantime = "2.1.0"
reqwest = "0.11.1"
roxmltree = "0.14.0"
url = "2.2.2"
mangadex-api = { git = "https://gitlab.com/gondolyr/mangadex-api", features = ["multi-thread"] }
openweather = { git = "https://github.com/Tracreed/openweather"}
ron = "0.7.0"
uuid = "0.8.2"
wolfram_alpha = { git = "https://github.com/ParadoxSpiral/wolfram-alpha-rs" }
ebina-anilist = { path = "../ebina-anilist" }
html2md = "0.2.13"
helium-api = { git = "https://github.com/Tracreed/helium-api-rs" }
diesel_migrations = "1.4.0"
rustnao = "0.2.1"

[features]
numeric = ["bigdecimal"]
default = ["bigdecimal"]

[dependencies.serenity]
version = "0.10.2"
features = ["framework", "standard_framework", "rustls_backend", "collector"]
