[package]
name = "ebina-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebina-types = { version = "0.1.0", path = "../ebina-types" }
http-types = "2.12.0"
prometheus = "0.13.0"
serde = "1.0.136"
serde_json = "1.0.79"
serenity = "0.11.2"
tide = "0.16.0"
